--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -1,4 +1,3 @@
-
 $namespace: 'pg';
 $element-separator: '__';
 $modifier-separator: '--';
@@ -142,6 +141,8 @@ $--button-large-padding-horizontal: 25px !default;
     }
   }
 }
+
+
 @mixin m($modifier) {
   $selector: &;
   $currentSelector: '';
@@ -171,6 +172,7 @@ $--button-large-padding-horizontal: 25px !default;
   font-size: $font-size;
   border-radius: $border-radius;
   &.is-round {
+    border-radius: 20px;
     padding: $padding-vertical $padding-horizontal;
   }
 }
